base/src/test/resources/failure/tyck/tele-prim-no-type.aya.txt
In file $FILE:2:5 ->

  1 | prim String
  2 | prim strcat (str1 str2: String)
           ^----^

Error: prim strcat is expected to have a type

1 error(s), 0 warning(s).
What are you doing?
